@startuml

title __PRACAINZYNIERSKA.APP's Class Diagram__\n

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.BluetoothConnect {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.BuildConfig {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.CLocation {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.Chooseactivity {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.Conversionlogic {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.DBAdapter {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.Historia {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.ItemlistViewmodel {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.MainActivity {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.MapsActivity {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.Potreningu {
    }
  }
  

  namespace com.example.pracainzynierska {
    class com.example.pracainzynierska.Wykres_terenu {
    }
  }
  

  namespace com.example.pracainzynierska {
    namespace db {
      abstract class com.example.pracainzynierska.db.AppDatabase {
      }
    }
  }
  

  namespace com.example.pracainzynierska {
    namespace db {
      class com.example.pracainzynierska.db.AppDatabase_Impl {
      }
    }
  }
  

  namespace com.example.pracainzynierska {
    namespace db {
      class com.example.pracainzynierska.db.User {
      }
    }
  }
  

  namespace com.example.pracainzynierska {
    namespace db {
      interface com.example.pracainzynierska.db.UserDao {
      }
    }
  }
  

  namespace com.example.pracainzynierska {
    namespace db {
      class com.example.pracainzynierska.db.UserDao_Impl {
      }
    }
  }
  

  com.example.pracainzynierska.BluetoothConnect -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.pracainzynierska.CLocation -up-|> android.location.Location
  com.example.pracainzynierska.Chooseactivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.pracainzynierska.DBAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.pracainzynierska.DBAdapter o-- com.example.pracainzynierska.DBAdapter.HandleDataClick : clickListener
  com.example.pracainzynierska.Historia .up.|> com.example.pracainzynierska.DBAdapter.HandleDataClick
  com.example.pracainzynierska.Historia -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.pracainzynierska.Historia o-- com.example.pracainzynierska.db.AppDatabase : db
  com.example.pracainzynierska.Historia o-- com.example.pracainzynierska.DBAdapter : dbAdapter
  com.example.pracainzynierska.Historia o-- com.example.pracainzynierska.ItemlistViewmodel : viewModel
  com.example.pracainzynierska.ItemlistViewmodel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.pracainzynierska.ItemlistViewmodel o-- com.example.pracainzynierska.db.AppDatabase : appDatabase
  com.example.pracainzynierska.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.pracainzynierska.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.pracainzynierska.MapsActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.pracainzynierska.Potreningu .up.|> android.view.View.OnClickListener
  com.example.pracainzynierska.Potreningu .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.pracainzynierska.Potreningu -up-|> androidx.fragment.app.FragmentActivity
  com.example.pracainzynierska.Potreningu o-- com.example.pracainzynierska.Conversionlogic : conversionlogic
  com.example.pracainzynierska.Wykres_terenu -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.pracainzynierska.db.AppDatabase -up-|> androidx.room.RoomDatabase
  com.example.pracainzynierska.db.AppDatabase_Impl -up-|> com.example.pracainzynierska.db.AppDatabase
  com.example.pracainzynierska.db.AppDatabase_Impl o-- com.example.pracainzynierska.db.UserDao : _userDao
  com.example.pracainzynierska.db.UserDao_Impl .up.|> com.example.pracainzynierska.db.UserDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
